Add JFX modules on java >= 9